debug-script.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-debugger
  namespace: gpu-metrics-test
spec:
  hostNetwork: true  # Use host network
  hostPID: true      # Access host processes
  nodeSelector:
    kubernetes.io/hostname: node6
  containers:
  - name: debugger
    image: ubuntu:22.04
    command: 
    - /bin/bash
    - -c
    - |
      [...]
    securityContext:
      privileged: true  # Required for host access
      capabilities:
        add: ["NET_ADMIN", "SYS_ADMIN"]
